bug fix in exercise 9

--- a/exercise 9/index9.html
+++ b/exercise 9/index9.html
@@ -8,6 +8,6 @@
         <h1> This is the last example </h1>
         <hr/>
         <p> Take the image from example 7 and turn it into a link that takes you to the webpage from example 8! </p>
-        <a href='https://github.com/daisy-u'> <img src'https://s.hdnux.com/photos/71/54/75/15126391/3/375x250.jpg' width= '400'> </a>
+        <a href='https://github.com/daisy-u'> <img src='https://s.hdnux.com/photos/71/54/75/15126391/3/375x250.jpg' width= '400'> </a>
     </body>
 </html>
